updated landing page with coming soon

--- a/truffle/app/public/css/index.css
+++ b/truffle/app/public/css/index.css
@@ -221,3 +221,11 @@ hr {
   height: 300px;
   width: 300px;
 }
+
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-left: -50px; /* margin is -0.5 * dimension */
+    margin-top: -25px; 
+}​
